# emfsm

./: CMakeLists.txt
cmake/: arm-gcc-toolchain.cmake  armcc-toolchain.cmake  fsm-config.cmake.in  iar-toolchain.cmake  mingw-toolchain.cmake
examples/: bms_example.c  led_example.c
include/: fsm.h
src/: fsm.c
tests/: test_fsm.c
